style.css
/* ... */
      .legal ol li p {
        padding-left: 2.4em;
        text-indent: 0; }
      .legal ol li ol li {
        margin-top: 1em; }
  .legal .specialgroup {
    margin-top: 2em; }

.schedule, .additional-terms {
  max-width: 70ch;
  margin: 0 auto; }
  .schedule ol li, .additional-terms ol li {
    margin-bottom: 1em;
    margin-top: 2em; }
    .schedule ol li:before, .additional-terms ol li:before {
      margin: 0 0.5em 0 0; }
    .schedule ol li ol li, .additional-terms ol li ol li {
      margin-top: 1em; }

@media only screen and (min-width: 768px) {
  .legal-section {
    padding-left: 60px;
    padding-right: 60px; } }

button {
  font-family: 'Rubik', sans-serif;
  font-size: 16px;
  font-weight: 500;
  border-radius: 5px;
  border: none;
  letter-spacing: .5px; }
  button.large-btn {
    font-size: 20px;
    padding: 20px 50px; }
  button.blue {
    background: #303778;
    color: white; }
    button.blue:hover {
      background: #3f489c; }
    button.blue a {
      color: white; }
  button.login-button {
    background: none;
    border-radius: 5px;
    border: 1px solid #303778;
    font-size: 16px;
    font-weight: 400;
    padding: 10px 20px; }
    button.login-button a {
      color: #303778; }
      button.login-button a:visited {
        color: #303778; }
    button.login-button:hover {
      background: #303778;
      color: #FCFDFF; }
      button.login-button:hover a {
        color: #FCFDFF !important; }
        button.login-button:hover a:visited {
          color: #FCFDFF !important; }

.faq-section {
  padding-bottom: 100px;
  padding-left: 30px;
  padding-right: 30px;
  background: #EFF3F6; }
  .faq-section .faq-group {
    max-width: 80ch;
    margin: 0 auto;
    padding-bottom: 80px; }
    .faq-section .faq-group h3 {
      font-size: 2em;
      color: #303778;
      margin-bottom: 30px; }
    .faq-section .faq-group .empty-faq {
      box-sizing: border-box;
      border-bottom: #E0E4EB 1px solid;
      padding-left: 20px;
      padding-right: 20px;
      padding-top: 20px;
      padding-bottom: 20px;
      background: white;
      border-radius: 10px;
      -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.35);
      -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.35);
      box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.35); }
      .faq-section .faq-group .empty-faq p {
        padding: 20px;
        text-align: center; }
    .faq-section .faq-group .all-questions {
      background: white;
      border-radius: 10px;
      -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.35);
      -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.35);
      box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.35); }
      .faq-section .faq-group .all-questions .question-answer-group {
        box-sizing: border-box;
        border-bottom: #E0E4EB 1px solid;
        padding-left: 20px;
        padding-right: 20px;
        padding-top: 20px;
        padding-bottom: 20px;
      }
        .faq-section .faq-group .all-questions .question-answer-group:last-child {
          border-bottom: none; }
        .faq-section .faq-group .all-questions .question-answer-group label {
          margin: 0;
          padding: 0; }
        .faq-section .faq-group .all-questions .question-answer-group input {
          display: none; }
        .faq-section .faq-group .all-questions .question-answer-group .question {
          display: flex;
          justify-content: flex-start;
          align-items: flex-start;
          font-weight: 500;
          width: 100%;
          color: #303778; }
          .faq-section .faq-group .all-questions .question-answer-group .question .icon {
            display: flex;
            width: 20px;
            height: 20px;
            background: url("img/bx-chevron-right.svg") no-repeat center center;
            background-size: 15px 15px;
            margin-right: 10px;
            transition: all .3s ease-out; }
          .faq-section .faq-group .all-questions .question-answer-group .question span {
            width: 95%; }
        .faq-section .faq-group .all-questions .question-answer-group .answer {
          color: #2D3138;
          display: none;
          margin-left: 30px;
          margin-right: 20px; 
          box-sizing: border-box;
          padding-top: 0px;
          visibility: hidden;
          max-height: 0px;
          opacity: 0%; 
        }
          .faq-section .faq-group .all-questions .question-answer-group .answer p {
            padding: 10px 0px; }
          .faq-section .faq-group .all-questions .question-answer-group .answer img {
            width: 100%;
            max-width: 320px;
            height: auto; }
          .faq-section .faq-group .all-questions .question-answer-group .answer ul {
            list-style-type: disc;
            margin: .2em 1.2em; }
            .faq-section .faq-group .all-questions .question-answer-group .answer ul li {
              padding: .2em; }
        .faq-section .faq-group .all-questions .question-answer-group input:checked ~ .answer {
          display: block;
          visibility: visible;
          padding-top: 10px;
          max-height: 800px;
          opacity: 100%;
          transition: all .3s ease-out; }
        .faq-section .faq-group .all-questions .question-answer-group input:checked ~ .question .icon {
          transform: rotate(90deg);
          transition: all .3s ease-out; }

.index-page header {
  background: #FFE1EC;
  color: #303778; }
  .index-page header .header-container a {
    text-decoration: none;
    color: #303778; }
    .index-page header .header-container a:hover {
      color: #303778; }
    .index-page header .header-container a:visited {
      color: #303778; }
    .index-page header .header-container a:active {
      color: #303778; }

.index-page section.intro-section {
  background: #FFE1EC;
  padding-left: 30px;
  padding-right: 30px; }
  .index-page section.intro-section .admin-dashboard {
    margin: 0 auto; }
/* ... */

